<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">NBP Calculator</string>

  <string name="menu_about">About</string>
  <string name="about_version_number">Version Number</string>
  <string name="about_build_time">Build Time</string>
  <string name="about_source_revision">Source Revision</string>

  <string name="label_variable">Variable Name:</string>

  <string name="hint_expression">[ enter expression ]</string>
  <string name="hint_variable">type variable name</string>

  <string name="button_backspace">Backspace</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_delete">Delete</string>
  <string name="button_down">Down</string>
  <string name="button_erase">Erase</string>
  <string name="button_function">f(x)</string>
  <string name="button_left">Left</string>
  <string name="button_new">New</string>
  <string name="button_right">Right</string>
  <string name="button_store">Store</string>
  <string name="button_up">Up</string>
  <string name="button_variable">Var</string>

  <string name="title_erase">Erase Variable</string>
  <string name="title_eraseMultiple">Erase Variables</string>
  <string name="title_function">Apply Function</string>
  <string name="title_new">New Variable</string>
  <string name="title_store">Store Variable</string>
  <string name="title_variable">Recall Variable</string>

  <string name="title_calculatorMode">Calculator Mode</string>
  <string name="description_calculatorMode_decimal">Decimal</string>
  <string name="description_calculatorMode_hexadecimal">Hexadecimal</string>

  <string name="title_decimalNotation">Decimal Notation</string>
  <string name="description_decimalNotation_engineering">Engineering</string>
  <string name="description_decimalNotation_fixed">Fixed</string>
  <string name="description_decimalNotation_scientific">Scientific</string>

  <string name="title_angleUnit">Angle Unit</string>
  <string name="description_angleUnit_degree">Degrees</string>
  <string name="description_angleUnit_gradian">Gradians</string>
  <string name="description_angleUnit_radian">Radians</string>

  <string name="title_conversion_type">Select Unit Type</string>
  <string name="title_conversion_from">Select From Unit</string>
  <string name="title_conversion_to">Select To Unit</string>
  <string name="label_conversion_type">Type</string>
  <string name="label_conversion_from">From</string>
  <string name="label_conversion_to">To</string>

  <string name="description_keypad_conversion">conversion keypad</string>
  <string name="description_keypad_decimal">decimal keypad</string>
  <string name="description_keypad_function">function keypad</string>
  <string name="description_keypad_hexadecimal">hexadecimal keypad</string>

  <string name="description_key_alternateKeypad">Alternate Keypad</string>
  <string name="description_key_clearExpression">Clear Expression</string>
  <string name="description_key_function">f of x</string>
  <string name="description_key_variable">Variable</string>

  <string name="description_digit_zero">zero</string>
  <string name="description_digit_one">one</string>
  <string name="description_digit_two">two</string>
  <string name="description_digit_three">three</string>
  <string name="description_digit_four">four</string>
  <string name="description_digit_five">five</string>
  <string name="description_digit_six">six</string>
  <string name="description_digit_seven">seven</string>
  <string name="description_digit_eight">eight</string>
  <string name="description_digit_nine">nine</string>
  <string name="description_digit_A">A</string>
  <string name="description_digit_B">B</string>
  <string name="description_digit_C">C</string>
  <string name="description_digit_D">D</string>
  <string name="description_digit_E">E</string>
  <string name="description_digit_F">F</string>

  <string name="description_sign_E">x times 10 to the y</string>
  <string name="description_sign_decimal">decimal</string>
  <string name="description_sign_minutes">minutes</string>
  <string name="description_sign_seconds">seconds</string>
  <string name="description_sign_equals">equals</string>
  <string name="description_sign_openBracket">open bracket</string>
  <string name="description_sign_closeBracket">close bracket</string>
  <string name="description_sign_plus">plus</string>
  <string name="description_sign_minus">minus</string>
  <string name="description_sign_times">times</string>
  <string name="description_sign_divide">divide</string>
  <string name="description_sign_modulo">remainder</string>
  <string name="description_sign_exponentiate">x to the y</string>
  <string name="description_sign_factorial">factorial</string>
  <string name="description_sign_percent">percent</string>
  <string name="description_sign_not">bitwise complement</string>
  <string name="description_sign_and">bitwise and</string>
  <string name="description_sign_or">bitwise or</string>
  <string name="description_sign_xor">bitwise exclusive or</string>
  <string name="description_sign_lsl">logical shift left</string>
  <string name="description_sign_lsr">logical shift right</string>
  <string name="description_sign_asr">arithmetic shift right</string>

  <string name="description_variable_e">e</string>
  <string name="description_variable_i">i</string>
  <string name="description_variable_pi">pi</string>

  <string name="description_function_abs">absolute value</string>
  <string name="description_function_acos">arc cosine</string>
  <string name="description_function_arg">argument</string>
  <string name="description_function_asin">arc sine</string>
  <string name="description_function_atan">arc tangent</string>
  <string name="description_function_cbrt">cube root</string>
  <string name="description_function_cnj">conjugate</string>
  <string name="description_function_cos">cosine</string>
  <string name="description_function_cosh">hyperbolic cosine</string>
  <string name="description_function_d2r">degrees to radians</string>
  <string name="description_function_exp">e to the x</string>
  <string name="description_function_log10">log base 10</string>
  <string name="description_function_log">natural log</string>
  <string name="description_function_r2d">radians to degrees</string>
  <string name="description_function_rcp">reciprocal</string>
  <string name="description_function_sinh">hyperbolic sine</string>
  <string name="description_function_sin">sine</string>
  <string name="description_function_sqrt">square root</string>
  <string name="description_function_tanh">hyperbolic tangent</string>
  <string name="description_function_tan">tangent</string>

  <string name="error_incompatible_function">incompatible function</string>
  <string name="error_incompatible_variable">incompatible variable</string>
  <string name="error_invalid_decimal">invalid decimal</string>
  <string name="error_invalid_hexadecimal">invalid hexadecimal</string>
  <string name="error_missing_element">missing element</string>
  <string name="error_missing_operator">missing operator</string>
  <string name="error_missing_subexpression">missing subexpression</string>
  <string name="error_no_expression">no expression</string>
  <string name="error_no_functions">no functions</string>
  <string name="error_no_result">no result</string>
  <string name="error_no_variables">no user-defined variables</string>
  <string name="error_protected_variable">protected variable</string>
  <string name="error_unclosed_bracket">unclosed bracket</string>
  <string name="error_undefined_result">undefined result</string>
  <string name="error_unexpected_character">unexpected character</string>
  <string name="error_unknown_function">unknown function</string>
  <string name="error_unknown_variable">unknown variable</string>
  <string name="error_unopened_bracket">unopened bracket</string>
</resources>
