<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/keypad_hexadecimal"
  >

  <TableRow android:layout_weight="1">
    <Button
      android:layout_weight="1"
      android:text="("
      android:contentDescription="@string/description_sign_openBracket"
     />

    <Button
      android:layout_weight="1"
      android:text=")"
      android:contentDescription="@string/description_sign_closeBracket"
     />

    <Button
      android:layout_weight="1"
      android:text="&lt;"
      android:contentDescription="@string/description_sign_lsl"
     />

    <Button
      android:layout_weight="1"
      android:text="&gt;"
      android:contentDescription="@string/description_sign_lsr"
     />

    <Button
      android:layout_weight="1"
      android:text="%"
      android:contentDescription="@string/description_sign_modulo"
     />

    <Button
      android:layout_weight="1"
      android:text="^"
      android:contentDescription="@string/description_sign_xor"
     />
  </TableRow>

  <TableRow>
    <Button
      android:layout_weight="1"
      android:text="C"
      android:contentDescription="@string/description_digit_C"
     />

    <Button
      android:layout_weight="1"
      android:text="D"
      android:contentDescription="@string/description_digit_D"
     />

    <Button
      android:layout_weight="1"
      android:text="E"
      android:contentDescription="@string/description_digit_E"
     />

    <Button
      android:layout_weight="1"
      android:text="F"
      android:contentDescription="@string/description_digit_F"
     />

    <Button
      android:layout_weight="1"
      android:text="÷"
      android:contentDescription="@string/description_sign_divide"
     />

    <Button
      android:layout_weight="1"
      android:text="|"
      android:contentDescription="@string/description_sign_or"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:layout_weight="1"
      android:text="8"
      android:contentDescription="@string/description_digit_eight"
     />

    <Button
      android:layout_weight="1"
      android:text="9"
      android:contentDescription="@string/description_digit_nine"
     />

    <Button
      android:layout_weight="1"
      android:text="A"
      android:contentDescription="@string/description_digit_A"
     />

    <Button
      android:layout_weight="1"
      android:text="B"
      android:contentDescription="@string/description_digit_B"
     />

    <Button
      android:layout_weight="1"
      android:text="×"
      android:contentDescription="@string/description_sign_times"
     />

    <Button
      android:layout_weight="1"
      android:text="&amp;"
      android:contentDescription="@string/description_sign_and"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:layout_weight="1"
      android:text="4"
      android:contentDescription="@string/description_digit_four"
     />

    <Button
      android:layout_weight="1"
      android:text="5"
      android:contentDescription="@string/description_digit_five"
     />

    <Button
      android:layout_weight="1"
      android:text="6"
      android:contentDescription="@string/description_digit_six"
     />

    <Button
      android:layout_weight="1"
      android:text="7"
      android:contentDescription="@string/description_digit_seven"
     />

    <Button
      android:layout_weight="1"
      android:text="&#x2212;"
      android:contentDescription="@string/description_sign_minus"
     />

    <Button
      android:layout_weight="1"
      android:text="~"
      android:contentDescription="@string/description_sign_not"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:layout_weight="1"
      android:text="0"
      android:contentDescription="@string/description_digit_zero"
     />

    <Button
      android:layout_weight="1"
      android:text="1"
      android:contentDescription="@string/description_digit_one"
     />

    <Button
      android:layout_weight="1"
      android:text="2"
      android:contentDescription="@string/description_digit_two"
     />

    <Button
      android:layout_weight="1"
      android:text="3"
      android:contentDescription="@string/description_digit_three"
     />

    <Button
      android:layout_weight="1"
      android:text="+"
      android:contentDescription="@string/description_sign_plus"
     />

    <Button
      android:layout_weight="1"
      android:text="="
      android:contentDescription="@string/description_sign_equals"
     />
  </TableRow>
</TableLayout>
