<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/keypad_decimal"
  >

  <TableRow android:layout_weight="1">
    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="("
      android:contentDescription="@string/description_sign_openBracket"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text=")"
      android:contentDescription="@string/description_sign_closeBracket"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="&quot;"
      android:contentDescription="@string/description_sign_minutes"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="'"
      android:contentDescription="@string/description_sign_seconds"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="x10^y"
      android:hint="×10^"
      android:contentDescription="@string/description_sign_E"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="7"
      android:contentDescription="@string/description_digit_seven"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="8"
      android:contentDescription="@string/description_digit_eight"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="9"
      android:contentDescription="@string/description_digit_nine"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="÷"
      android:contentDescription="@string/description_sign_divide"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="x^y"
      android:hint="^"
      android:contentDescription="@string/description_sign_exponentiate"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="4"
      android:contentDescription="@string/description_digit_four"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="5"
      android:contentDescription="@string/description_digit_five"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="6"
      android:contentDescription="@string/description_digit_six"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="×"
      android:contentDescription="@string/description_sign_times"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="!"
      android:contentDescription="@string/description_sign_factorial"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="1"
      android:contentDescription="@string/description_digit_one"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="2"
      android:contentDescription="@string/description_digit_two"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="3"
      android:contentDescription="@string/description_digit_three"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="&#x2212;"
      android:contentDescription="@string/description_sign_minus"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="%"
      android:contentDescription="@string/description_sign_percent"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="."
      android:contentDescription="@string/description_sign_decimal"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="0"
      android:contentDescription="@string/description_digit_zero"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="i"
      android:contentDescription="@string/description_variable_i"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="+"
      android:contentDescription="@string/description_sign_plus"
     />

    <Button
      android:minHeight="@dimen/button_minHeight"
      android:minWidth="@dimen/button_minWidth"
      android:text="="
      android:contentDescription="@string/description_sign_equals"
     />
  </TableRow>
</TableLayout>
