<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/memory"
  >

  <TableRow android:layout_weight="1">
    <Button
      android:id="@+id/button_variable"
      android:text="@string/button_variable"
      android:contentDescription="@string/description_key_variable"
     />

    <Button
      android:id="@+id/button_store"
      android:text="@string/button_store"
     />
  </TableRow>

  <TableRow android:layout_weight="1">
    <Button
      android:id="@+id/button_function"
      android:text="@string/button_function"
      android:contentDescription="@string/description_key_function"
     />

    <Button
      android:id="@+id/button_erase"
      android:text="@string/button_erase"
     />
  </TableRow>
</TableLayout>
